--- a/src/app/journal/page.module.css
+++ b/src/app/journal/page.module.css
@@ -72,6 +72,6 @@
 
   .postImage {
     width: 100%;
-    height: 200px;
+    height: auto;
   }
 }
