--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -3,18 +3,22 @@
   overflow: hidden;
   cursor: pointer;
   display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .imageWrapper {
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .image {
   width: 100%;
-  height: 100%;
+  height: 100% !important;
   object-fit: cover;
+  object-position: center;
   display: block;
 }
 
@@ -71,6 +75,8 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  width: 100%;
+  height: 100%;
 }
 
 .placeholderTitle {
