--- a/src/components/ProjectCarousel/ProjectCarousel.module.css
+++ b/src/components/ProjectCarousel/ProjectCarousel.module.css
@@ -25,7 +25,7 @@
 }
 
 .slide img {
-  height: 100%;
+  height: 100% !important;
   width: auto;
   object-fit: cover;
   display: block;
